[gd_scene load_steps=16 format=2]

[ext_resource path="res://Levels/TowerPlacer/TowerPlacer.tscn" type="PackedScene" id=1]
[ext_resource path="res://Levels/TestLevel/Level.gd" type="Script" id=2]
[ext_resource path="res://Levels/TestLevel/tileset.tres" type="TileSet" id=3]
[ext_resource path="res://Objects/PlayerBase/PlayerBase.tscn" type="PackedScene" id=4]
[ext_resource path="res://Levels/TestLevel/AStarGrid.gd" type="Script" id=5]
[ext_resource path="res://Levels/TestLevel/crater.svg" type="Texture" id=6]
[ext_resource path="res://Objects/WaveSpawner2D/WaveSpawner2D.tscn" type="PackedScene" id=7]
[ext_resource path="res://Levels/TestLevel/Waves/Wave1.tscn" type="PackedScene" id=8]
[ext_resource path="res://Levels/TestLevel/Waves/Wave2.tscn" type="PackedScene" id=9]
[ext_resource path="res://Objects/PanningCamera2D/PanningCamera2D.tscn" type="PackedScene" id=10]
[ext_resource path="res://Objects/EnemySpawn/enemy-spawn.svg" type="Texture" id=11]
[ext_resource path="res://Levels/TestLevel/field.svg" type="Texture" id=12]

[sub_resource type="GDScript" id=1]
script/source = "extends Line2D


onready var _tween := $Tween
onready var _timer := $Timer

func fade_out() -> void:
	var transparent := modulate
	transparent.a = 0.0
	_tween.interpolate_property(self, \"modulate\", modulate, transparent, 0.5)
	_tween.start()
	_timer.start(0.5 / (get_point_count() -1))


func fade_in() -> void:
	var opaque := modulate
	opaque.a = 1.0
	_tween.interpolate_property(self, \"modulate\", modulate, opaque, 0.5)
	_tween.start()


func _on_Timer_timeout() -> void:
	if get_point_count() > 0:
		remove_point(get_point_count() -1)
	else:
		_timer.stop()
"

[sub_resource type="Animation" id=2]
tracks/0/type = "value"
tracks/0/path = NodePath("WaveSpawner2D:spawn_scene")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 8 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "spawn_wave"
} ]
}

[sub_resource type="Animation" id=3]
tracks/0/type = "value"
tracks/0/path = NodePath("WaveSpawner2D:spawn_scene")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 9 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "spawn_wave"
} ]
}

[node name="Level" type="Node2D"]
script = ExtResource( 2 )

[node name="AStarGrid" type="TileMap" parent="."]
tile_set = ExtResource( 3 )
format = 1
tile_data = PoolIntArray( 4, 2, 196608, 5, 2, 196612, 6, 2, 196612, 7, 2, 196609, 8, 2, 196609, 9, 2, 196612, 10, 2, 196609, 11, 2, 196609, 12, 2, 196609, 13, 2, 196609, 14, 2, 196609, 15, 2, 196609, 16, 2, 196609, 17, 2, 196612, 18, 2, 196612, 19, 2, 196609, 20, 2, 196609, 21, 2, 196609, 22, 2, 196609, 23, 2, 196610, 65540, 2, 262144, 65541, 2, 262145, 65542, 2, 262145, 65543, 2, 262145, 65544, 2, 262145, 65545, 2, 262145, 65546, 2, 262145, 65547, 2, 262145, 65548, 2, 262145, 65549, 2, 262145, 65550, 2, 262145, 65551, 2, 262148, 65552, 2, 262145, 65553, 2, 262145, 65554, 2, 262145, 65555, 2, 262145, 65556, 2, 262145, 65557, 2, 262145, 65558, 2, 262145, 65559, 2, 262146, 131076, 2, 5, 131077, 2, 327681, 131078, 2, 327681, 131079, 2, 327681, 131080, 2, 131072, 131081, 2, 262145, 131082, 2, 262145, 131083, 2, 262145, 131084, 2, 262145, 131085, 2, 262145, 131086, 2, 262145, 131087, 2, 262145, 131088, 2, 262145, 131089, 2, 262145, 131090, 2, 262145, 131091, 2, 262145, 131092, 2, 262145, 131093, 2, 262145, 131094, 2, 262145, 131095, 2, 262146, 196616, 2, 262144, 196617, 2, 262145, 196618, 2, 262145, 196619, 2, 262145, 196620, 2, 262148, 196621, 2, 262145, 196622, 2, 262145, 196623, 2, 262145, 196624, 2, 262145, 196625, 2, 262145, 196626, 2, 262145, 196627, 2, 131074, 196628, 2, 327681, 196629, 2, 327681, 196630, 2, 327681, 196631, 2, 0, 262152, 2, 262144, 262153, 2, 262148, 262154, 2, 262145, 262155, 2, 262145, 262156, 2, 262145, 262157, 2, 262145, 262158, 2, 262148, 262159, 2, 262145, 262160, 2, 262145, 262161, 2, 262145, 262162, 2, 262145, 262163, 2, 262146, 262167, 2, 0, 327688, 2, 262144, 327689, 2, 262145, 327690, 2, 262145, 327691, 2, 262145, 327692, 2, 262145, 327693, 2, 262145, 327694, 2, 262145, 327695, 2, 262145, 327696, 2, 262145, 327697, 2, 262145, 327698, 2, 262145, 327699, 2, 262146, 327703, 2, 0, 393224, 2, 262144, 393225, 2, 262145, 393226, 2, 262145, 393227, 2, 262145, 393228, 2, 262148, 393229, 2, 262145, 393230, 2, 262145, 393231, 2, 262145, 393232, 2, 262145, 393233, 2, 262148, 393234, 2, 262148, 393235, 2, 262146, 393239, 2, 0, 458756, 2, 196611, 458757, 2, 196609, 458758, 2, 196609, 458759, 2, 0, 458760, 2, 0, 458761, 2, 327681, 458762, 2, 327681, 458763, 2, 327681, 458764, 2, 131072, 458765, 2, 262148, 458766, 2, 262145, 458767, 2, 262145, 458768, 2, 262145, 458769, 2, 262145, 458770, 2, 262145, 458771, 2, 2, 458772, 2, 196609, 458773, 2, 196609, 458774, 2, 196609, 458775, 2, 0, 524292, 2, 262144, 524293, 2, 262145, 524294, 2, 262145, 524295, 2, 262146, 524300, 2, 262144, 524301, 2, 262145, 524302, 2, 262145, 524303, 2, 262145, 524304, 2, 262145, 524305, 2, 262145, 524306, 2, 262145, 524307, 2, 262145, 524308, 2, 262145, 524309, 2, 262145, 524310, 2, 262145, 524311, 2, 262146, 589828, 2, 262144, 589829, 2, 262148, 589830, 2, 262145, 589831, 2, 262146, 589836, 2, 262144, 589837, 2, 262148, 589838, 2, 262145, 589839, 2, 262148, 589840, 2, 262145, 589841, 2, 262145, 589842, 2, 262148, 589843, 2, 262145, 589844, 2, 262145, 589845, 2, 262145, 589846, 2, 262145, 589847, 2, 262146, 655364, 2, 262147, 655365, 2, 262145, 655366, 2, 262145, 655367, 2, 262146, 655372, 2, 262144, 655373, 2, 262145, 655374, 2, 262145, 655375, 2, 262145, 655376, 2, 262145, 655377, 2, 262145, 655378, 2, 262145, 655379, 2, 262148, 655380, 2, 262145, 655381, 2, 262145, 655382, 2, 262145, 655383, 2, 262146, 720900, 2, 327680, 720901, 2, 327684, 720902, 2, 327681, 720903, 2, 327682, 720908, 2, 5, 720909, 2, 327681, 720910, 2, 327681, 720911, 2, 327681, 720912, 2, 327681, 720913, 2, 327681, 720914, 2, 327681, 720915, 2, 327681, 720916, 2, 327681, 720917, 2, 327681, 720918, 2, 327684, 720919, 2, 327682 )
script = ExtResource( 5 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 3 )
format = 1
tile_data = PoolIntArray( 0, 3, 0, 1, 3, 0, 2, 3, 0, 3, 3, 0, 4, 3, 0, 5, 3, 0, 6, 3, 0, 7, 3, 0, 8, 3, 0, 9, 3, 0, 10, 3, 0, 11, 3, 0, 12, 3, 0, 13, 3, 0, 14, 3, 0, 15, 3, 0, 16, 3, 0, 17, 3, 0, 18, 3, 0, 19, 3, 0, 20, 3, 0, 21, 3, 0, 22, 3, 0, 23, 3, 0, 24, 3, 0, 25, 3, 0, 26, 3, 0, 27, 3, 0, 28, 3, 0, 29, 3, 0, 65536, 3, 0, 65537, 3, 0, 65538, 3, 0, 65539, 3, 0, 65540, 3, 0, 65541, 3, 0, 65542, 3, 0, 65543, 3, 0, 65544, 3, 0, 65545, 3, 0, 65546, 3, 0, 65547, 3, 0, 65548, 3, 0, 65549, 3, 0, 65550, 3, 0, 65551, 3, 0, 65552, 3, 0, 65553, 3, 0, 65554, 3, 0, 65555, 3, 0, 65556, 3, 0, 65557, 3, 0, 65558, 3, 0, 65559, 3, 0, 65560, 3, 0, 65561, 3, 0, 65562, 3, 0, 65563, 3, 0, 65564, 3, 0, 65565, 3, 0, 131072, 3, 0, 131073, 3, 0, 131074, 3, 0, 131075, 3, 0, 131076, 3, 0, 131077, 3, 0, 131078, 3, 0, 131079, 3, 0, 131080, 3, 0, 131081, 3, 0, 131082, 3, 0, 131083, 3, 0, 131084, 3, 0, 131085, 3, 0, 131086, 3, 0, 131087, 3, 0, 131088, 3, 0, 131089, 3, 0, 131090, 3, 0, 131091, 3, 0, 131092, 3, 0, 131093, 3, 0, 131094, 3, 0, 131095, 3, 0, 131096, 3, 0, 131097, 3, 0, 131098, 3, 0, 131099, 3, 0, 131100, 3, 0, 131101, 3, 0, 196608, 3, 0, 196609, 3, 0, 196610, 3, 0, 196611, 3, 0, 196616, 3, 0, 196617, 3, 0, 196618, 3, 0, 196619, 3, 0, 196620, 3, 0, 196621, 3, 0, 196622, 3, 0, 196623, 3, 0, 196624, 3, 0, 196625, 3, 0, 196626, 3, 0, 196627, 3, 0, 196628, 3, 0, 196629, 3, 0, 196630, 3, 0, 196631, 3, 0, 196632, 3, 0, 196633, 3, 0, 196634, 3, 0, 196635, 3, 0, 196636, 3, 0, 196637, 3, 0, 262144, 3, 0, 262145, 3, 0, 262146, 3, 0, 262147, 3, 0, 262152, 3, 0, 262153, 3, 0, 262154, 3, 0, 262155, 3, 0, 262156, 3, 0, 262157, 3, 0, 262158, 3, 0, 262159, 3, 0, 262160, 3, 0, 262161, 3, 0, 262162, 3, 0, 262163, 3, 0, 262167, 3, 0, 262168, 3, 0, 262169, 3, 0, 262170, 3, 0, 262171, 3, 0, 262172, 3, 0, 262173, 3, 0, 327680, 3, 0, 327681, 3, 0, 327682, 3, 0, 327683, 3, 0, 327688, 3, 0, 327689, 3, 0, 327690, 3, 0, 327691, 3, 0, 327692, 3, 0, 327693, 3, 0, 327694, 3, 0, 327695, 3, 0, 327696, 3, 0, 327697, 3, 0, 327698, 3, 0, 327699, 3, 0, 327703, 3, 0, 327704, 3, 0, 327705, 3, 0, 327706, 3, 0, 327707, 3, 0, 327708, 3, 0, 327709, 3, 0, 393216, 3, 0, 393217, 3, 0, 393218, 3, 0, 393219, 3, 0, 393224, 3, 0, 393225, 3, 0, 393226, 3, 0, 393227, 3, 0, 393228, 3, 0, 393229, 3, 0, 393230, 3, 0, 393231, 3, 0, 393232, 3, 0, 393233, 3, 0, 393234, 3, 0, 393235, 3, 0, 393239, 3, 0, 393240, 3, 0, 393241, 3, 0, 393242, 3, 0, 393243, 3, 0, 393244, 3, 0, 393245, 3, 0, 458752, 3, 0, 458753, 3, 0, 458754, 3, 0, 458755, 3, 0, 458756, 3, 0, 458757, 3, 0, 458758, 3, 0, 458759, 3, 0, 458760, 3, 0, 458761, 3, 0, 458762, 3, 0, 458763, 3, 0, 458764, 3, 0, 458765, 3, 0, 458766, 3, 0, 458767, 3, 0, 458768, 3, 0, 458769, 3, 0, 458770, 3, 0, 458771, 3, 0, 458772, 3, 0, 458773, 3, 0, 458774, 3, 0, 458775, 3, 0, 458776, 3, 0, 458777, 3, 0, 458778, 3, 0, 458779, 3, 0, 458780, 3, 0, 458781, 3, 0, 524288, 3, 0, 524289, 3, 0, 524290, 3, 0, 524291, 3, 0, 524292, 3, 0, 524293, 3, 0, 524294, 3, 0, 524295, 3, 0, 524300, 3, 0, 524301, 3, 0, 524302, 3, 0, 524303, 3, 0, 524304, 3, 0, 524305, 3, 0, 524306, 3, 0, 524307, 3, 0, 524308, 3, 0, 524309, 3, 0, 524310, 3, 0, 524311, 3, 0, 524312, 3, 0, 524313, 3, 0, 524314, 3, 0, 524315, 3, 0, 524316, 3, 0, 524317, 3, 0, 589824, 3, 0, 589825, 3, 0, 589826, 3, 0, 589827, 3, 0, 589828, 3, 0, 589829, 3, 0, 589830, 3, 0, 589831, 3, 0, 589836, 3, 0, 589837, 3, 0, 589838, 3, 0, 589839, 3, 0, 589840, 3, 0, 589841, 3, 0, 589842, 3, 0, 589843, 3, 0, 589844, 3, 0, 589845, 3, 0, 589846, 3, 0, 589847, 3, 0, 589848, 3, 0, 589849, 3, 0, 589850, 3, 0, 589851, 3, 0, 589852, 3, 0, 589853, 3, 0, 655360, 3, 0, 655361, 3, 0, 655362, 3, 0, 655363, 3, 0, 655364, 3, 0, 655365, 3, 0, 655366, 3, 0, 655367, 3, 0, 655372, 3, 0, 655373, 3, 0, 655374, 3, 0, 655375, 3, 0, 655376, 3, 0, 655377, 3, 0, 655378, 3, 0, 655379, 3, 0, 655380, 3, 0, 655381, 3, 0, 655382, 3, 0, 655383, 3, 0, 655384, 3, 0, 655385, 3, 0, 655386, 3, 0, 655387, 3, 0, 655388, 3, 0, 655389, 3, 0, 720896, 3, 0, 720897, 3, 0, 720898, 3, 0, 720899, 3, 0, 720900, 3, 0, 720901, 3, 0, 720902, 3, 0, 720903, 3, 0, 720908, 3, 0, 720909, 3, 0, 720910, 3, 0, 720911, 3, 0, 720912, 3, 0, 720913, 3, 0, 720914, 3, 0, 720915, 3, 0, 720916, 3, 0, 720917, 3, 0, 720918, 3, 0, 720919, 3, 0, 720920, 3, 0, 720921, 3, 0, 720922, 3, 0, 720923, 3, 0, 720924, 3, 0, 720925, 3, 0, 786432, 3, 0, 786433, 3, 0, 786434, 3, 0, 786435, 3, 0, 786436, 3, 0, 786437, 3, 0, 786438, 3, 0, 786439, 3, 0, 786440, 3, 0, 786441, 3, 0, 786442, 3, 0, 786443, 3, 0, 786444, 3, 0, 786445, 3, 0, 786446, 3, 0, 786447, 3, 0, 786448, 3, 0, 786449, 3, 0, 786450, 3, 0, 786451, 3, 0, 786452, 3, 0, 786453, 3, 0, 786454, 3, 0, 786455, 3, 0, 786456, 3, 0, 786457, 3, 0, 786458, 3, 0, 786459, 3, 0, 786460, 3, 0, 786461, 3, 0, 851968, 3, 0, 851969, 3, 0, 851970, 3, 0, 851971, 3, 0, 851972, 3, 0, 851973, 3, 0, 851974, 3, 0, 851975, 3, 0, 851976, 3, 0, 851977, 3, 0, 851978, 3, 0, 851979, 3, 0, 851980, 3, 0, 851981, 3, 0, 851982, 3, 0, 851983, 3, 0, 851984, 3, 0, 851985, 3, 0, 851986, 3, 0, 851987, 3, 0, 851988, 3, 0, 851989, 3, 0, 851990, 3, 0, 851991, 3, 0, 851992, 3, 0, 851993, 3, 0, 851994, 3, 0, 851995, 3, 0, 851996, 3, 0, 851997, 3, 0, 917504, 3, 0, 917505, 3, 0, 917506, 3, 0, 917507, 3, 0, 917508, 3, 0, 917509, 3, 0, 917510, 3, 0, 917511, 3, 0, 917512, 3, 0, 917513, 3, 0, 917514, 3, 0, 917515, 3, 0, 917516, 3, 0, 917517, 3, 0, 917518, 3, 0, 917519, 3, 0, 917520, 3, 0, 917521, 3, 0, 917522, 3, 0, 917523, 3, 0, 917524, 3, 0, 917525, 3, 0, 917526, 3, 0, 917527, 3, 0, 917528, 3, 0, 917529, 3, 0, 917530, 3, 0, 917531, 3, 0, 917532, 3, 0, 917533, 3, 0, 983040, 3, 0, 983041, 3, 0, 983042, 3, 0, 983043, 3, 0, 983044, 3, 0, 983045, 3, 0, 983046, 3, 0, 983047, 3, 0, 983048, 3, 0, 983049, 3, 0, 983050, 3, 0, 983051, 3, 0, 983052, 3, 0, 983053, 3, 0, 983054, 3, 0, 983055, 3, 0, 983056, 3, 0, 983057, 3, 0, 983058, 3, 0, 983059, 3, 0, 983060, 3, 0, 983061, 3, 0, 983062, 3, 0, 983063, 3, 0, 983064, 3, 0, 983065, 3, 0, 983066, 3, 0, 983067, 3, 0, 983068, 3, 0, 983069, 3, 0, 1048576, 3, 0, 1048577, 3, 0, 1048578, 3, 0, 1048579, 3, 0, 1048580, 3, 0, 1048581, 3, 0, 1048582, 3, 0, 1048583, 3, 0, 1048584, 3, 0, 1048585, 3, 0, 1048586, 3, 0, 1048587, 3, 0, 1048588, 3, 0, 1048589, 3, 0, 1048590, 3, 0, 1048591, 3, 0, 1048592, 3, 0, 1048593, 3, 0, 1048594, 3, 0, 1048595, 3, 0, 1048596, 3, 0, 1048597, 3, 0, 1048598, 3, 0, 1048599, 3, 0, 1048600, 3, 0, 1048601, 3, 0, 1048602, 3, 0, 1048603, 3, 0, 1048604, 3, 0, 1048605, 3, 0 )

[node name="Field" type="Sprite" parent="."]
position = Vector2( 960, 544 )
texture = ExtResource( 12 )

[node name="Crater" type="Sprite" parent="Field"]
position = Vector2( -448, -32 )
texture = ExtResource( 6 )
centered = false

[node name="Crater2" type="Sprite" parent="Field"]
position = Vector2( 320, -288 )
scale = Vector2( 0.734375, 0.734375 )
texture = ExtResource( 6 )
centered = false

[node name="Crater3" type="Sprite" parent="Field"]
position = Vector2( -672, -320 )
scale = Vector2( 0.734375, 0.734375 )
texture = ExtResource( 6 )
centered = false

[node name="PathPreview" type="Line2D" parent="."]
position = Vector2( 32, 32 )
points = PoolVector2Array( 96, 0, 0, 0 )
width = 20.0
default_color = Color( 1, 0.415686, 0.160784, 1 )
joint_mode = 2
script = SubResource( 1 )

[node name="Tween" type="Tween" parent="PathPreview"]

[node name="Timer" type="Timer" parent="PathPreview"]

[node name="TowerPlacer" parent="." instance=ExtResource( 1 )]

[node name="WaveSpawner2D" parent="." instance=ExtResource( 7 )]
spawn_scene = ExtResource( 8 )

[node name="PanningCamera2D" parent="." instance=ExtResource( 10 )]
position = Vector2( 960, 544 )

[node name="EventsPlayer" type="AnimationPlayer" parent="."]
anims/00.first-wave = SubResource( 2 )
anims/01.second-wave = SubResource( 3 )

[node name="StartPosition2D" type="Position2D" parent="."]
position = Vector2( 352, 96 )
z_index = 1

[node name="StartPoint" type="Sprite" parent="StartPosition2D"]
texture = ExtResource( 11 )

[node name="GoalPosition2D" type="Position2D" parent="."]
position = Vector2( 1440, 672 )

[node name="PlayerBase" parent="GoalPosition2D" instance=ExtResource( 4 )]
position = Vector2( 0, 64 )
[connection signal="timeout" from="PathPreview/Timer" to="PathPreview" method="_on_Timer_timeout"]
[connection signal="destroyed" from="GoalPosition2D/PlayerBase" to="." method="_on_PlayerBase_destroyed"]
