[gd_scene load_steps=6 format=2]

[ext_resource path="res://Interface/SelectionArea2D/SelectionArea2D.tscn" type="PackedScene" id=1]
[ext_resource path="res://Levels/TestLevel/Level.gd" type="Script" id=2]
[ext_resource path="res://Levels/TestLevel/tileset.tres" type="TileSet" id=3]
[ext_resource path="res://Levels/TestLevel/AStarGrid.gd" type="Script" id=5]
[ext_resource path="res://Levels/TowerPlacement/TowerPlacement.tscn" type="PackedScene" id=6]

[node name="Level" type="Node2D"]
script = ExtResource( 2 )

[node name="AStarGrid" type="TileMap" parent="."]
tile_set = ExtResource( 3 )
format = 1
tile_data = PoolIntArray( 5, 1, 0, 6, 1, 0, 7, 1, 0, 8, 1, 0, 9, 1, 0, 10, 1, 0, 65541, 1, 0, 65542, 1, 0, 65543, 1, 0, 65544, 1, 0, 65545, 1, 0, 65546, 1, 0, 131077, 1, 0, 131078, 1, 0, 131079, 1, 0, 131080, 1, 0, 131081, 1, 0, 131082, 1, 0, 131083, 1, 0, 131084, 1, 0, 196613, 1, 0, 196614, 1, 0, 196615, 1, 0, 196618, 1, 0, 196619, 1, 0, 196620, 1, 0, 196621, 1, 0, 262149, 1, 0, 262150, 1, 0, 262151, 1, 0, 262155, 1, 0, 262156, 1, 0, 262157, 1, 0, 262158, 1, 0, 262159, 1, 0, 327685, 1, 0, 327686, 1, 0, 327687, 1, 0, 327693, 1, 0, 327694, 1, 0, 327695, 1, 0, 327696, 1, 0, 393221, 1, 0, 393222, 1, 0, 393223, 1, 0, 393231, 1, 0, 393232, 1, 0, 393233, 1, 0, 393234, 1, 0, 458757, 1, 0, 458758, 1, 0, 458759, 1, 0, 458768, 1, 0, 458769, 1, 0, 458770, 1, 0, 458771, 1, 0, 458772, 1, 0, 524293, 1, 0, 524294, 1, 0, 524295, 1, 0, 524306, 1, 0, 524307, 1, 0, 524308, 1, 0, 589829, 1, 0, 589830, 1, 0, 589831, 1, 0, 589844, 1, 0, 589845, 1, 0, 589846, 1, 0, 589847, 1, 0, 655365, 1, 0, 655366, 1, 0, 655367, 1, 0, 655380, 1, 0, 655381, 1, 0, 655382, 1, 0, 655383, 1, 0, 720901, 1, 0, 720902, 1, 0, 720903, 1, 0, 720904, 1, 0, 720905, 1, 0, 720906, 1, 0, 720907, 1, 0, 720908, 1, 0, 720909, 1, 0, 720910, 1, 0, 720911, 1, 0, 720912, 1, 0, 720913, 1, 0, 720914, 1, 0, 720915, 1, 0, 720916, 1, 0, 720917, 1, 0, 720918, 1, 0, 720919, 1, 0, 786437, 1, 0, 786438, 1, 0, 786439, 1, 0, 786440, 1, 0, 786441, 1, 0, 786442, 1, 0, 786443, 1, 0, 786444, 1, 0, 786445, 1, 0, 786446, 1, 0, 786447, 1, 0, 786448, 1, 0, 786449, 1, 0, 786450, 1, 0, 786451, 1, 0, 786452, 1, 0, 786453, 1, 0, 786454, 1, 0, 786455, 1, 0, 851973, 1, 0, 851974, 1, 0, 851975, 1, 0, 851976, 1, 0, 851977, 1, 0, 851978, 1, 0, 851979, 1, 0, 851980, 1, 0, 851981, 1, 0, 851982, 1, 0, 851983, 1, 0, 851984, 1, 0, 851985, 1, 0, 851986, 1, 0, 851987, 1, 0, 851988, 1, 0, 851989, 1, 0, 851990, 1, 0, 851991, 1, 0 )
script = ExtResource( 5 )

[node name="StartPosition2D" type="Position2D" parent="AStarGrid"]
position = Vector2( 352, 32 )

[node name="Label" type="Label" parent="AStarGrid/StartPosition2D"]
margin_left = -16.0
margin_top = -8.0
margin_right = 24.0
margin_bottom = 6.0
text = "Start"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GoalPosition2D" type="Position2D" parent="AStarGrid"]
position = Vector2( 1504, 800 )

[node name="Label" type="Label" parent="AStarGrid/GoalPosition2D"]
margin_left = -16.0
margin_top = -8.0
margin_right = 24.0
margin_bottom = 6.0
text = "Goal"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TowerPlacement" parent="." instance=ExtResource( 6 )]

[node name="SelectionArea2D" parent="." instance=ExtResource( 1 )]
